# magnetic_board_driver

./: Cargo.toml  build.rs  build.rs.back  flake.nix
app/: Cargo.toml
app/src/: main.rs
data_transfer/: Cargo.toml
data_transfer/src/: conversions.rs  lib.rs  memory.rs  messaging.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/microcontroller/: Cargo.toml
