#[package]
#edition = "2021"
##name = "firmware"
#version = "0.1.0"
##license = "MIT OR Apache-2.0"

#[dependencies]
#embassy-stm32 = { version = "0.1.0",  features = [ "defmt", "stm32wba52cg", "time-driver-any", "memory-x", "exti"]  }
#embassy-sync = { version = "0.5.0",  features = ["defmt"] }
##embassy-executor = { version = "0.6.3", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
#embassy-time = { version = "0.3.0",  features = ["defmt", "defmt-timestamp-uptime" ,"tick-hz-32_768"] }
#embassy-net = { version = "0.4.0",  features = ["defmt", "udp", "proto-ipv6", "medium-ieee802154", ], optional=true }
#embedded-io = {version="0.6.1", default-features=false}
#
#defmt = "0.3"
#defmt-rtt = "0.4"
#
##cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
#cortex-m-rt = "0.7.0"
#embedded-hal = "0.2.6"
#panic-probe = { version = "0.3", features = ["print-defmt"] }
#futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
##heapless = { version = "0.8", default-features = false }
#static_cell = "2"
#embedded-hal-async = {version="1.0.0", features=["defmt-03"]}
#bitvec = {version="1.0.1", default-features=false}
##bitflags = "2.6.0"
#bitmatch = "0.1.1"
#postcard = { version = "1.0.10", features = ["embedded-io"] }
#serde = { version = "1.0.215", default-features = false }
#data_transfer = {path = "../data_transfer"}


#[profile.release]
#debug = 2
[workspace]
members = ["microcontroller"]
resolver="2"
